<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView
		android:id="@+id/game_hdr_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/game_controlstr"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_centerHorizontal="true"
	/>
	<TextView
		android:id="@+id/name_prompt_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/game_hdr_tv"
		android:text="@string/input_name_prompt"
	/>
	<TextView
		android:id="@+id/name_set_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/game_hdr_tv"
		android:text="@string/name_set"
		android:visibility="invisible"
	/>
	<TextView
		android:id="@+id/name_entered_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/game_hdr_tv"
		android:layout_toRightOf="@id/name_set_tv"
		android:layout_marginLeft="10dip"
		android:text=""
		android:visibility="invisible"
	/>
	<EditText
		android:id="@+id/enter_nameET"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_below="@id/name_prompt_tv"
		android:hint="@string/type_name_str"
		android:inputType="textPersonName">
		<requestFocus></requestFocus>
	</EditText>
	<Button
	    android:id="@+id/doneBtn"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/enter_nameET"
	    android:layout_centerHorizontal="true"
	    android:text="@string/done_str"
	/>
	<TextView
		android:id="@+id/game_level_announcer_TV"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/enter_nameET"
		android:text="@string/current_game_level_str"
		android:visibility="invisible"
	/>
	<TextView
		android:id="@+id/game_level_TV"
		android:text="" 
		android:layout_width="50dip"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/game_level_announcer_TV"
		android:layout_below="@id/enter_nameET"
		android:layout_marginLeft="10dip"
		android:visibility="invisible"
	/>

<!--The next two views are used for the list of choices-->
	<ListView  
         android:id="@android:id/list"
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
         android:layout_below="@id/game_level_announcer_TV"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:layout_marginTop="30dp"
    />
	<TextView
		android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_set_str"
     />

</RelativeLayout>
