<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/game_in_prog_str"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_gravity="center_horizontal"
	/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/curnt_user_name_str"
	/>
	<TextView
		android:id="@+id/users_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#ffffff"
	/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/updated_game_level_str"
	/>
	<EditText
		android:id="@+id/game_level_entry"
		android:layout_height="wrap_content"
		android:layout_width="100dip"
		android:gravity="center_horizontal"
		android:inputType="number">
		<requestFocus></requestFocus>
	</EditText>
	<Button
		android:id="@+id/end_game"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/end_game">
	</Button>
</LinearLayout>
