<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/User_name_tv_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="19dp"
        android:text="@string/current_user_name" />

    <TextView
        android:id="@+id/user_name_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/User_name_tv_high_score"
        android:layout_below="@+id/User_name_tv_high_score"
        android:layout_marginTop="16dp" />
    
    <TextView
        android:id="@+id/high_scores_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_high_score"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:text="@string/top_10_high_scores" />

    <TextView
        android:id="@+id/name_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_name_high_score"
        android:layout_below="@+id/high_scores_lbl"

        android:text="@string/name" />

    <TextView
        android:id="@+id/scores_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name_lbl"
        android:layout_alignBottom="@+id/name_lbl"
        android:layout_alignRight="@+id/high_scores_lbl"
        android:text="@string/scores" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/done_high_scoresBTN"
        android:layout_below="@+id/name_lbl"
        android:orientation="vertical" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textAlignment="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >
        </ListView>

    </LinearLayout>

        <Button
            android:id="@+id/done_high_scoresBTN"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/back_home_str" />

</RelativeLayout>
